tests/errors/syntax_errors/import_star.py
from empty_import import *

print(a)
